# MovingLeastSquares

./: .gitignore  CMakeLists.txt  README.md  moving_least_squares.cpp  moving_least_squares.pyx  requirements.txt  setup.py  test-moving-least-squares.py
include/: MovingLeastSquares.h
sample_pcds/: region_growing_tutorial-smooth.pcd  spring1-smooth.pcd  spring1.pcd
src/: MovingLeastSquares.cpp  main.cpp
